sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var ech=true
  var taille=getNombreValeurs()
  
  while (ech){
    ech=false
    for (i<-0 to taille-2,2){
      if (!plusPetitQue(i,i+1)){
        echange(i,i+1)
        ech=true 
      }
      
    }} 
  
  
}